--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="shortcut icon" href="note.svg" type="image/x-icon">
 
-    <title>Lista</title>
+    <title>Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
